@@ -13,6 +13,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****  Fix interface ports with comma lists, msg1058. [Ed Lander]
 
+****  Fix parameter real conversion from integer.
+
 ****  Fix clang warnings, bug668.  [Yutetsu Takatsukasa]
 
 
